Fix dark mode and add toggle

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body.dark-mode {
 }
 
 a {
+  color: #424242;
   text-decoration: none;
 }
 
